resolved alignment issue

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -1,15 +1,21 @@
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .card-img-container {
+    width: auto;
     display: flex;
     justify-content: start;
     align-items: center;
     overflow: auto;
-    padding: 10px 60px;
-
+    padding: 10px;
 }
 
 .card-img, .card-img img {
-    margin: 0 5px;
-    width: 165px;
+    margin: 0 7px;
+    height: 100%;
+    width: 160px;
     border-radius: 15px;
     transition: transform 0.15s ease-in;
 }
